--- a/css/style.css
+++ b/css/style.css
@@ -1259,6 +1259,7 @@ textarea.form-control {
 
 .navbar-nav .dropdown-menu {
   position: static;
+  
 }
 
 .navbar-collapse {
@@ -2314,7 +2315,7 @@ h5,
 
 @media (max-width: 991.98px) {
   .ftco-navbar-light {
-    background: #22c8ba !important;
+    background: rgba(36, 28, 83, 0.301) !important; /* Adjust the RGBA values and opacity as needed */ !important;
   }
 }
 
@@ -2426,7 +2427,7 @@ h5,
   font-size: 13px;
   font-weight: 700;
   background: rgba(255, 255, 255, 0.3);
-  background: #1eb2a6;
+  background: transparent;
   padding: 1.5rem;
   color: #fff;
   border-radius: 0;
@@ -2501,6 +2502,15 @@ h5,
   font-size: 12px;
   display: block;
   font-weight: 500;
+}
+
+@media screen and (max-width: 768px) {
+  .hero-wrap {
+      background-size: contain; /* Or any other size that fits better on mobile */
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-image: url('images/bg_1.jpg');
+  }
 }
 
 .hero-wrap {
